Started implementing the /play endpoint
